fix(navbar): fix css navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 .App {
   text-align: center;
-  height: 100%;
 }
+
+
+
+/*.App * {*/
+/*  background: #000 !important;*/
+/*  color: #0f0 !important;*/
+/*  outline: solid #f00 1px !important;*/
+/*}*/
