--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -4,19 +4,46 @@
   color: white;
 
   a {
-    color: #e8deff !important;
+    color: #ffffff !important;
   }
 
-  .navbar-nav {
-    width: 100%;
-    justify-content: space-around;
+  button:focus {
+    outline: unset;
   }
 
-  .ml-auto {
-    margin-left: unset !important;
+  .navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
   }
+
+  .navbar-expand {
+    .navbar-nav {
+      width: 100%;
+      justify-content: space-around;
+
+      .nav-link {
+        padding-right: 1rem;
+        padding-left: 1rem;
+
+        &:hover {
+          background: #73737336;
+        }
+      }
+    }
+    .hide-brand-mobile {
+      display: none;
+    }
+  }
+
 
   @media (max-width: 768px) {
+
+    .hide-brand-mobile {
+      display: unset;
+    }
+
+    .hide-brand-desktop {
+      display: none;
+    }
 
     .nav-header {
       display: flex;
@@ -26,6 +53,23 @@
       .navbar-brand {
         display: block;
         margin-right: auto;
+      }
+    }
+
+
+    .navbar-expand {
+      flex-direction: column;
+
+      .navbar-nav {
+        flex-direction: column;
+
+        .nav-link {
+          padding-left: 0;
+        }
+      }
+      .navbar-toggler {
+        border-color: #73737336;
+        display: block;
       }
     }
 
@@ -39,18 +83,8 @@
       }
     }
 
-    .navbar-expand {
-      flex-direction: column;
-    }
-
-    .navbar-expand .navbar-nav {
-      flex-direction: column;
-    }
     .collapse:not(.show) {
       display: none!important;
-    }
-    .navbar-expand .navbar-toggler {
-      display: block;
     }
   }
 }
