--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -3,9 +3,8 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100%;
+  height: 100vh;
   color: white;
-
 
   .header {
     background-color: #350e0ede;
@@ -13,8 +12,60 @@
     margin-top: 13%;
 
     h1 {
-
       font-size: 4.5rem;
+    }
+  }
+
+  .social {
+    font-size: 3rem;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+
+    a {
+      color: white;
+
+      svg {
+        margin-right: 1rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 1080px) {
+ .home-container {
+
+   .header {
+     margin-top: 20%;
+     h1 {
+       font-size: 3.5rem;
+     }
+   }
+
+   .social {
+     right: unset;
+     padding-right: unset;
+     padding-bottom: unset;
+     width: 100%;
+   }
+ }
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .home-container {
+    background-image: url("../../assets/img/main-bg-mobile.jpg");
+    .header {
+      text-align: end;
+      padding: 2rem;
+      margin-top: 35%;
+      h1 {
+        font-size: 2rem;
+      }
+      h2 {
+       font-size: 1rem;
+      }
     }
   }
 }
