--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -58,11 +58,15 @@
     background-image: url("../../assets/img/main-bg-mobile.jpg");
     .header {
       text-align: end;
-      padding: 2rem;
-      margin-top: 35%;
+      padding: 2.5rem 2rem;
+      position: absolute;
+      width: 100%;
+      top: 25%;
+
       h1 {
         font-size: 2rem;
       }
+
       h2 {
        font-size: 1rem;
       }
