--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,12 @@ body, html {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  background-color: #1e1d2c !important;
 }
 
 #root {
+  height: 100%;
 }
 
 code {
