--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "media-queries";
+
 .App {
   font-family: 'Rubik', sans-serif;
   text-align: center;
@@ -15,6 +17,10 @@
     margin: 4.5rem 1.5rem  0 1.5rem;
   }
 
+  .spc-evenly {
+    justify-content: space-evenly;
+  }
+
   .footer {
     padding: 1rem;
     background-color: var(--yr-world-dark-shade);
@@ -24,7 +30,22 @@
       margin-bottom: 0;
     }
   }
+}
 
+@include media-query-md {
+  .App {
+    .margin-page {
+      margin: 1.5rem 1.5rem  0 1.5rem;
+    }
+  }
+}
+
+@include media-query-ipad-portrait {
+  .App {
+    .margin-page {
+      margin: 1.5rem 1.5rem  0 1.5rem;
+    }
+  }
 }
 
 
