--- a/src/components/MainHeader/MainHeader.scss
+++ b/src/components/MainHeader/MainHeader.scss
@@ -17,23 +17,18 @@
   }
 }
 
-@include media-query-md {
-  .about-container {
-    .wrapper {
-      .title {
-        margin-top: 1rem;
-        padding: 0.5rem 1rem 0.5rem 1.5rem;
+@include  media-query-sm {
+  .main-header {
+     padding: .75rem 1rem .4rem 1.5rem;
 
-        h1 {
-          font-size: 2.25rem;
-        }
+    h1 {
+      font-size: 2.40rem;
+    }
 
-        div {
-          height: .75rem;
-          width: 85%;
-          bottom: -.25rem;
-        }
-      }
+    div {
+      height: .75rem;
+      bottom: -.25rem;
+      right: .75rem;
     }
   }
 }
