fix(general): bug fixes

--- a/src/_media-queries.scss
+++ b/src/_media-queries.scss
@@ -2,7 +2,7 @@ $breakpoint-sm: 576px;
 $breakpoint-md: 767px;
 $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
-$breakpoint-height: 835px;
+$breakpoint-height: 901px;
 
 $breakpoint-destinations: 1280px;
 
@@ -84,7 +84,7 @@ $breakpoint-destinations: 1280px;
 }
 
 @mixin media-query-height {
-  @media screen and (min-height: $breakpoint-height) {
+  @media screen and (min-height: $breakpoint-height) and (min-width: $breakpoint-xl) {
     @content;
   }
 }
