--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,20 @@
     justify-content: space-evenly;
   }
 
+  .button-as-link {
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+    border: unset;
+    padding: unset;
+    font-weight: 500;
+
+    &:hover {
+      color: #0056b3;
+      text-decoration: underline;
+    }
+  }
+
   .footer {
     padding: 1rem;
     background-color: var(--yr-world-dark-shade);
@@ -35,7 +49,7 @@
 @include media-query-md {
   .App {
     .margin-page {
-      margin: 1rem 1.5rem  0 1rem;
+      margin: 4.25rem 1.5rem  0 1rem;
     }
   }
 }
@@ -43,7 +57,8 @@
 @include media-query-ipad-portrait {
   .App {
     .margin-page {
-      margin: 1.5rem 1.5rem  0 1.5rem;
+      margin: 4.5rem 1.5rem  0 1.5rem;
+
     }
   }
 }
