fix(general): fix navbar width and brand cursor

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@
   --yr-world-dark-shade: #1e1d2c;
   --yr-world-brand-color: #6d9136;
   --yr-world-dark-accent:  #6d2020d4;
-  --yr-world-light-accent: #315067;
+  --yr-world-light-accent: #1e1d2c;
   --yr-world-light-shade: #f4f5f5;
 
   .margin-page {
@@ -37,8 +37,7 @@
 
   .footer {
     padding: 1rem;
-    background-color: var(--yr-world-dark-shade);
-    color: var(--yr-world-light-shade);
+    color: #ffffff8c;
 
     h5 {
       margin-bottom: 0;
