--- a/src/containers/Links/Links.scss
+++ b/src/containers/Links/Links.scss
@@ -8,8 +8,9 @@
 
     .side-info {
       padding: .5rem 1.5rem;
-      background-color: var(--yr-world-dark-grey-bg);
+      background-color: var(--yr-world-dark-accent);
       margin-bottom: 1rem;
+      margin-top: 2rem;
 
       h5 {
         margin-bottom: 0;
@@ -28,7 +29,7 @@
 
       .resource-item {
         background-color: var(--yr-world-light-accent);
-        border: 1px solid #416a88;
+        border: 1px solid #4b4769;
         padding: 1.75rem;
         margin-right: 1rem;
         margin-bottom: 1rem;
