--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,11 @@ body, html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
-  background-color: #1e1d2c !important;
+  background-color:  #13121b !important;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 #root {
